fix: move processflow overflow style rules to nested element
Closes #399

--- a/src/angular-public/processflow/processflow/processflow.component.scss
+++ b/src/angular-public/processflow/processflow/processflow.component.scss
@@ -40,8 +40,10 @@ $processflowStepButtonPaddingBottom5K: 42;
   margin: 0;
   padding: 0;
   display: block;
-  overflow-x: hidden;
 
+  .sbb-processflow-header-wrapper {
+    overflow-x: hidden;
+  }
   .sbb-processflow-header {
     display: flex;
     align-items: center;
